fixed resolution mobile

--- a/src/components/carousel_images/Carousel_images.sass
+++ b/src/components/carousel_images/Carousel_images.sass
@@ -1,7 +1,7 @@
 //Media queries
 $Desktop: 1024px
 $Tablet: 768px
-$Mobile: 420px
+$Mobile: 320px
 
 //Variables
 $bgColor: #A9C5BA // Cor de fundo
@@ -36,7 +36,7 @@ $subtitleCarouselMobile: 14px
 .carousel.slide
     max-width: fit-content
 
-@media screen and ( min-width: $Mobile ) and ( max-width: $Tablet )
+@media screen and (min-width: $Mobile) and ( max-width: $Tablet )
     .images
         width: 200px
         height: auto
