--- a/src/components/form_sign_up/Form_sign_up.sass
+++ b/src/components/form_sign_up/Form_sign_up.sass
@@ -1,7 +1,7 @@
 //Media queries
 $Desktop: 1024px
 $Tablet: 768px
-$Mobile: 420px
+$Mobile: 320px
 
 //Variables
 $colorDarkGrey: #707070
@@ -115,7 +115,7 @@ $bigFontSizeMobile: 20px
     border-color: $colorRed
     border-width: 0 0 3px
 
-@media screen and ( min-width: $Mobile ) and ( max-width: $Tablet )
+@media screen and (min-width: $Mobile) and ( max-width: $Tablet )
     .button-google
         width: 150px
         height: auto
