--- a/src/components/hero/Hero.sass
+++ b/src/components/hero/Hero.sass
@@ -1,7 +1,7 @@
 //Media queries
 $Desktop: 1024px
 $Tablet: 768px
-$Mobile: 420px
+$Mobile: 320px
 
 //Variables    
 $colorBlack: #000000
@@ -19,6 +19,6 @@ $bigFontSizeMobile: 25px
     text-align: right
     color: $colorBlack
 
-@media screen and ( min-width: $Mobile ) and ( max-width: $Tablet )
+@media screen and (min-width: $Mobile) and ( max-width: $Tablet )
     .hero
         font-size: $bigFontSizeMobile
