--- a/src/pages/Sign_in.sass
+++ b/src/pages/Sign_in.sass
@@ -1,12 +1,12 @@
 //Media queries
 $Desktop: 1024px
 $Tablet: 768px
-$Mobile: 768px
+$Mobile: 320px
 
 .form
     width: 100%
     margin: 100px 50px 0 50px
 
-@media screen and ( max-width: $Tablet )
+@media screen and (min-width: $Mobile) and ( max-width: $Tablet )
     .form
         width: auto
